--- a/roles/sync-mediator/templates/mediator.json.j2
+++ b/roles/sync-mediator/templates/mediator.json.j2
@@ -1,11 +1,11 @@
 {
-  "urn": "urn:mediator:openinfoman-dhis2-sync",
+  "urn": "urn:mediator:openinfoman-dhis2-sync-next-gen",
   "version": "3.0.0",
-  "name": "OpenInfoMan-DHIS2 Sync Mediator",
-  "description": "OpenInfoMan-DHIS2 Sync Mediator",
+  "name": "OpenInfoMan-DHIS2 Sync Mediator NextGen",
+  "description": "OpenInfoMan-DHIS2 Sync Mediator for NextGen",
   "endpoints": [
     {
-      "name": "OpenInfoMan-DHIS2 Sync Trigger",
+      "name": "OpenInfoMan-DHIS2 Sync Trigger NextGen",
       "host": "localhost",
       "port": "5012",
       "path": "/trigger",
@@ -14,14 +14,16 @@
   ],
   "defaultChannelConfig": [
     {
-      "name": "OpenInfoMan-DHIS2 Sync",
-      "pollingSchedule" : "0 0 * * *",
+      "name": "OpenInfoMan-DHIS2 Sync NextGen",
+      "pollingSchedule": "0 0 * * *",
       "urlPattern": "^/_infomansync$",
       "type": "polling",
-      "allow": ["internal"],
+      "allow": [
+        "internal"
+      ],
       "routes": [
         {
-          "name": "OpenInfoMan-DHIS2 Sync Trigger",
+          "name": "OpenInfoMan-DHIS2 Sync Trigger NextGen",
           "host": "localhost",
           "port": "5012",
           "path": "/trigger",
@@ -33,152 +35,151 @@
   ],
   "configDefs": [
     {
-      "param": "dhis-to-ilr",
+      "param": "mapping",
+      "displayName": "Configurations Map",
+      "description": "A map of Source and Target Configurations for Syncing DHIS and ILR",
       "type": "struct",
-      "displayName": "DHIS2 to ILR Synchronization",
-      "description": "Setup for the DHIS2 to ILR Synchronization mode",
+      "array": true,
       "template": [
         {
-          "param": "ilr-url",
-          "type": "string",
-          "displayName": "ILR URL"
+          "param": "clientID",
+          "displayName": "Client ID",
+          "description": "ID of the client that is making the request.",
+          "type": "string"
         },
         {
-          "param": "ilr-doc",
+          "param": "dhis_to_ilr_ilr_url",
           "type": "string",
-          "displayName": "ILR Document",
+          "displayName": "ILR URL D2I"
+        },
+        {
+          "param": "dhis_to_ilr_ilr_doc",
+          "type": "string",
+          "displayName": "ILR Document D2I",
           "description": "Name of CSD document to publish to"
         },
         {
-          "param": "ilr-user",
+          "param": "dhis_to_ilr_ilr_user",
           "type": "string",
           "displayName": "ILR User"
         },
         {
-          "param": "ilr-pass",
+          "param": "dhis_to_ilr_ilr_pass",
           "type": "string",
           "displayName": "ILR Password"
         },
         {
-          "param": "dhis2-url",
+          "param": "dhis_to_ilr_dhis2_url",
           "type": "string",
-          "displayName": "DHIS2 URL"
+          "displayName": "DHIS2 URL D2I"
         },
         {
-          "param": "dhis2-user",
+          "param": "dhis_to_ilr_dhis2_user",
           "type": "string",
-          "displayName": "DHIS2 Username"
+          "displayName": "DHIS2 Username D2I"
         },
         {
-          "param": "dhis2-pass",
+          "param": "dhis_to_ilr_dhis2_pass",
           "type": "string",
-          "displayName": "DHIS2 Password"
+          "displayName": "DHIS2 Password D2I"
         },
         {
-          "param": "dousers",
+          "param": "dhis_to_ilr_dousers",
           "type": "bool",
           "displayName": "DHIS2 Users as Health Workers",
           "description": "Process DHIS2 Users are Health workers"
         },
         {
-          "param": "doservices",
+          "param": "dhis_to_ilr_doservices",
           "type": "bool",
           "displayName": "DHIS2 Data Elements as Services",
           "description": "Process DHIS2 Data Elements as services"
         },
         {
-          "param": "ignorecerts",
+          "param": "dhis_to_ilr_ignorecerts",
           "type": "bool",
           "displayName": "Ignore Certs",
           "description": "Ignore certificate checks"
         },
         {
-          "param": "levels",
+          "param": "dhis_to_ilr_levels",
           "type": "string",
           "displayName": "Levels",
           "description": "Levels of a facility. Example: LEVELS=(3 4 5)"
         },
         {
-          "param": "groupcodes",
+          "param": "dhis_to_ilr_groupcodes",
           "type": "string",
           "displayName": "Group Codes",
           "description": "Groups codes. Example: GROUPS=(COMMUNITY FACILITY COUNTRY)"
         },
         {
-          "param": "reset",
+          "param": "dhis_to_ilr_reset",
           "type": "bool",
           "displayName": "Reset Last Exported Time",
           "description": "Reset the last exported time"
         },
         {
-          "param": "publishfull",
+          "param": "dhis_to_ilr_publishfull",
           "type": "bool",
           "displayName": "Publish Full DHIS2 Metadata",
           "description": "Publish the full DHIS2 metadata (ignore the last exported time)"
         },
         {
-          "param": "debug",
+          "param": "dhis_to_ilr_debug",
           "type": "bool",
           "displayName": "Debug mode"
         },
         {
-          "param": "empty",
+          "param": "dhis_to_ilr_empty",
           "type": "bool",
           "displayName": "Empty CSD Document",
           "description": "Empty the CSD document before publishing"
-        }
-      ]
-    },
-    {
-      "param": "ilr-to-dhis",
-      "type": "struct",
-      "displayName": "ILR to DHIS2 Synchronization",
-      "description": "Setup for the ILR to DHIS2 Synchronization mode",
-      "template": [
-        {
-          "param": "ilr-url",
-          "type": "string",
-          "displayName": "ILR URL"
         },
         {
-          "param": "ilr-doc",
+          "param": "ilr_to_dhis_ilr_url",
           "type": "string",
-          "displayName": "ILR Document",
+          "displayName": "ILR URL I2D"
+        },
+        {
+          "param": "ilr_to_dhis_ilr_doc",
+          "type": "string",
+          "displayName": "ILR Document I2D",
           "description": "Name of CSD document to publish to"
         },
         {
-          "param": "ilr-user",
+          "param": "ilr_to_dhis_ilr_user",
           "type": "string",
           "displayName": "ILR User"
         },
         {
-          "param": "ilr-pass",
+          "param": "ilr_to_dhis_ilr_pass",
           "type": "string",
           "displayName": "ILR Password"
         },
         {
-          "param": "dhis2-url",
+          "param": "ilr_to_dhis_ilr_dhis2_url",
           "type": "string",
-          "displayName": "DHIS2 URL"
+          "displayName": "DHIS2 URL I2D"
         },
         {
-          "param": "dhis2-async",
+          "param": "ilr_to_dhis_ilr_dhis2_async",
           "type": "bool",
           "displayName": "DHIS2 Async Import",
           "description": "Whether to use the DHIS2 async import mechanism to import sites or not."
         },
         {
-          "param": "dhis2-user",
+          "param": "ilr_to_dhis_ilr_dhis2_user",
           "type": "string",
-          "displayName": "DHIS2 Username"
+          "displayName": "DHIS2 Username I2D"
         },
         {
-          "param": "dhis2-pass",
+          "param": "ilr_to_dhis_ilr_dhis2_pass",
           "type": "string",
-          "displayName": "DHIS2 Password"
+          "displayName": "DHIS2 Password I2D"
         },
         {
-          "param": "dhis2-version",
+          "param": "ilr_to_dhis_ilr_dhis2_version",
           "type": "string",
           "displayName": "DHIS2 version",
           "description": "The version of DHIS to export data for. This is used to call the correct stored query in the ILR for the correct DHIS2 version."
@@ -186,50 +187,52 @@
         {
           "displayName": "Async Response Receiver URL",
           "description": "The URL for the system that receives the response when the async import is done",
-          "param": "dhis2-async-receiver-url",
+          "param": "ilr_to_dhis_ilr_dhis2_async_receiver_url",
           "type": "string"
         },
         {
-          "param": "dhis2-poll-period",
+          "param": "ilr_to_dhis_ilr_dhis2_poll_period",
           "type": "number",
           "displayName": "DHIS2 tasks polling period (ms)",
           "description": "The period on which to poll the DHIS2 API to check whether an async system task is complete."
         },
         {
-          "param": "dhis2-poll-timeout",
+          "param": "ilr_to_dhis_ilr_dhis2_poll_timeout",
           "type": "number",
           "displayName": "DHIS2 task polling timeout (ms)",
           "description": "The timeout after which to stop polling the DHIS2 API and return an error."
         },
         {
-          "param": "dhis2-rebuild-resources",
+          "param": "ilr_to_dhis_ilr_dhis2_rebuild_resources",
           "type": "bool",
           "displayName": "DHIS2 enable resource rebuild",
           "description": "If this is enabled then the DHIS2 resource table will be rebuilt after data is imported into DHIS2. This is run as an async task in DHIS2."
-        }
-      ]
-    },
-    {
-      "param": "sync-type",
-      "type": "struct",
-      "displayName": "Synchronization Type Setup",
-      "description": "The steps that need to happen when a synchronization is triggered",
-      "template": [
+        },
         {
-          "param": "mode",
+          "param": "instanceID",
+          "displayName": "Instance ID",
+          "description": "ID of the instance of node dhis2 that is making the request.",
+          "type": "string"
+        },
+        {
+          "param": "sync_type_mode",
           "type": "option",
           "displayName": "Mode",
           "description": "The type of synchronization to perform: DHIS to ILR, ILR to DHIS or both",
-          "values": ["DHIS2 to ILR", "ILR to DHIS2", "Both"]
+          "values": [
+            "DHIS2 to ILR",
+            "ILR to DHIS2",
+            "Both"
+          ]
         },
         {
-          "param": "both-trigger-enabled",
+          "param": "sync_type_both_trigger_enabled",
           "type": "bool",
           "displayName": "Both Mode Trigger",
           "description": "If enabled, a target trigger URL will be called in between running the DHIS-to-ILR and ILR-to-DHIS processes"
         },
         {
-          "param": "both-trigger-url",
+          "param": "sync_type_both_trigger_url",
           "type": "string",
           "displayName": "Both Mode Trigger URL"
         }
@@ -237,41 +240,39 @@
     }
   ],
   "config": {
-    "sync-type": {
-        "both-trigger-url": "https://{{ global_openhim_hostname }}:5000/global/ilr/CSD/pollService/directory/UGOU-Managedls/update_cache",
-        "both-trigger-enabled": true,
-        "mode": "Both"
-    },
-    "ilr-to-dhis": {
-        "dhis2-rebuild-resources": false,
-        "dhis2-poll-timeout": "7200000",
-        "dhis2-poll-period": 5000,
-        "dhis2-async-receiver-url": "https://{{ node_dhis2_hostname }}/adxAdapter/updateSiteSyncStatus",
-        "dhis2-version": "v2.19",
-        "dhis2-pass": "{{ global_dhis2_password }}",
-        "dhis2-user": "{{ global_dhis2_username }}",
-        "dhis2-async": true,
-        "dhis2-url": "https://{{ global_openhim_hostname }}:5000/dhis2",
-        "ilr-doc": "{{ csd_site_document }}",
-        "ilr-url": "https://{{ global_openhim_hostname }}:5000/global/ilr/CSD"
-    },
-    "dhis-to-ilr": {
-        "ilr-pass": "",
-        "ilr-user": "",
-        "empty": false,
-        "debug": false,
-        "publishfull": false,
-        "reset": false,
-        "groupcodes": "('COMMUNITY' 'FACILITY' 'COUNTRY' 'COP_PRIORITAZATION_SNU' 'OUSCOUNTRIES')",
-        "levels": "",
-        "ignorecerts": true,
-        "doservices": true,
-        "dousers": true,
-        "dhis2-pass": "{{ node_dhis2_password }}",
-        "dhis2-user": "{{ node_dhis2_username }}",
-        "dhis2-url": "https://{{ node_dhis2_hostname }}",
-        "ilr-doc": "{{ csd_site_document }}",
-        "ilr-url": "http://localhost:8984/CSD"
-    }
+    "mapping": [
+      {
+        "clientID": "adx-adaptor",
+        "dhis_to_ilr_ilr_url": "http://localhost:8984/CSD",
+        "dhis_to_ilr_ilr_doc": "{{ csd_site_document }}",
+        "dhis_to_ilr_dhis2_url": "https://{{ node_dhis2_hostname }}",
+        "dhis_to_ilr_dhis2_user": "{{ node_dhis2_username }}",
+        "dhis_to_ilr_dhis2_pass": "{{ node_dhis2_password }}",
+        "dhis_to_ilr_dousers": true,
+        "dhis_to_ilr_doservices": true,
+        "dhis_to_ilr_ignorecerts": true,
+        "dhis_to_ilr_levels": "",
+        "dhis_to_ilr_groupcodes": "('COMMUNITY' 'FACILITY' 'COUNTRY' 'COP_PRIORITAZATION_SNU' 'OUSCOUNTRIES')",
+        "dhis_to_ilr_reset": false,
+        "dhis_to_ilr_publishfull": false,
+        "dhis_to_ilr_debug": false,
+        "dhis_to_ilr_empty": false,
+        "ilr_to_dhis_ilr_url": "https://{{ global_openhim_hostname }}:5000/global/ilr/CSD",
+        "ilr_to_dhis_ilr_doc": "{{ csd_site_document }}",
+        "ilr_to_dhis_ilr_dhis2_url": "https://{{ global_openhim_hostname }}:5000/dhis2",
+        "ilr_to_dhis_ilr_dhis2_async": true,
+        "ilr_to_dhis_ilr_dhis2_user": "{{ global_dhis2_username }}",
+        "ilr_to_dhis_ilr_dhis2_pass": "{{ global_dhis2_password }}",
+        "ilr_to_dhis_ilr_dhis2_version": "v2.19",
+        "ilr_to_dhis_ilr_dhis2_async_receiver_url": "https://{{ node_dhis2_hostname }}/adxAdapter/updateSiteSyncStatus",
+        "ilr_to_dhis_ilr_dhis2_poll_period": 5000,
+        "ilr_to_dhis_ilr_dhis2_poll_timeout": "7200000",
+        "ilr_to_dhis_ilr_dhis2_rebuild_resources": false,
+        "sync_type_mode": "ILR to DHIS2",
+        "sync_type_both_trigger_enabled": false,
+        "sync_type_both_trigger_url": "https://localhost:5000/ILR/CSD/pollService/directory/DATIM-OU-TZ/update_cache",
+        "instanceID": "UG"
+      }
+    ]
   }
 }
