Add templated config to OpenHIM-core deploy

--- a/roles/datim-mediator/templates/config.json.j2
+++ b/roles/datim-mediator/templates/config.json.j2
@@ -3,7 +3,7 @@
     "username": "mediators@openhim.org",
     "password": "{{ openhim_mediator_password }}",
     "apiURL": "https://localhost:8080",
-    "trustSelfSigned": "{{ allow_self_signed }}"
+    "trustSelfSigned": {{ allow_self_signed }}
   },
   "register": true
 }
