--- a/roles/sync-mediator/templates/default.json.j2
+++ b/roles/sync-mediator/templates/default.json.j2
@@ -11,7 +11,7 @@
       "username": "mediators@openhim.org",
       "password": "{{ openhim_mediator_password }}",
       "apiURL": "https://localhost:8080",
-      "trustSelfSigned": "{{ allow_self_signed }}"
+      "trustSelfSigned": {{ allow_self_signed }}
     }
   }
 }
