--- a/roles/openhim-core/templates/openhim-config.json.j2
+++ b/roles/openhim-core/templates/openhim-config.json.j2
@@ -67,8 +67,8 @@
       "service": "",
       "host": "email-smtp.us-east-1.amazonaws.com",
       "auth": {
-        "pass": "{{ smtp_access_key }}",
-        "user": "{{ smtp_secret_key }}"
+        "pass": "{{ smtp_secret_key }}",
+        "user": "{{ smtp_access_key }}"
       }
     }
   },
