Upgrade OpenHIM version to v4.0.4 to fix bugs

--- a/roles/openhim-datim-node-config/templates/openhim-config.json.j2
+++ b/roles/openhim-datim-node-config/templates/openhim-config.json.j2
@@ -146,8 +146,7 @@
       "authType": "private",
       "whitelist": [],
       "allow": [
-        "metadata",
-        "adx-adaptor"
+        "metadata"
       ],
       "type": "http"
     },
